refactor: keep only vanilla and FFM backends