@@ -18,7 +18,6 @@ loom {
     runs {
         configureEach {
             vmArg "--enable-native-access=ALL-UNNAMED"
-            vmArg "--add-modules=jdk.incubator.vector"
         }
     }
 }
@@ -39,10 +38,6 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     implementation "net.fabricmc:fabric-loader:${project.loader_version}"
     implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-
-    def joclVersion = "2.0.5"
-    implementation "org.jocl:jocl:${joclVersion}"
-    include "org.jocl:jocl:${joclVersion}"
 }
 
 def modVersion = version.toString()
@@ -57,7 +52,6 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
     options.release = 25
-    options.compilerArgs.addAll(["--add-modules", "jdk.incubator.vector"])
 }
 
 java {
